# search-tauri

./: README.md  myapp.key  myapp.key.pub  package.json  setting.json  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1699695531639-f55b08e858a68.mjs
.github/workflows/: node.js.yml  npm-publish-github-packages.yml
src/: App copy.vue  App.vue  main.ts  quasar-user-options.js  style.css
src-tauri/: .gitignore  .taurignore  Cargo.toml  search.db  search.db-journal  setting.json  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/code/: const_param.rs  db.rs  init_service.rs  mod.rs  model_actress.rs  model_file.rs  model_params.rs  model_setting.rs  service_disk.rs  service_http.rs  service_index.rs  service_search.rs  service_setting.rs  utils_do_file_name.rs
src-tauri/src/controller/: file_controller.rs  mod.rs
src-tauri/src/datamodel/: file_model.rs
src-tauri/src/service/: mod.rs  search_disk.rs
src-tauri/src/utils/: int_to_show.rs  mod.rs
src/api/actress/: index.ts
src/api/file/: index.ts
src/api/home/: index.ts
src/api/setting/: index.ts
src/boot/: axios.ts
src/components/: EssentialLink.vue  MutiInput.vue  MutiSelector.vue  PlayingVideo.vue  ShutdownComponent.vue
src/components/Header/: Header.vue
src/components/Player/: PlayerIndex.vue
src/components/api/: actressAPI.ts  homeAPI.ts  searchAPI.ts  settingAPI.ts
src/components/model/: File.ts  FileModel.ts  SettingModel.ts
src/components/utils/: index.ts
src/config/: ResultModel.ts
src/hooks/: userAxios.ts
src/layout/: DefaultLay.vue  MobileLay.vue
src/layouts/: MainLayout.vue
src/pages/: ErrorNotFound.vue  IndexPage.vue
src/plugin/: element.ts
src/route/: index.ts
src/router/: index.ts  routes.ts
src/store/: System.js  pinia.ts
src/stores/: System.ts  index.ts
src/styles/: quasar.variables.scss
src/types/: global.d.ts
src/utils/: ImageUtils.ts  ResultCode.ts  ResultResponse.ts  timeUtils.ts
(+24 files in other folders)
