[package]
name = "tauri-app"
version = "0.0.1"
description = "A Tauri App"
authors = ["hunter"]
license = ""
repository = "git@gitee.com:houhunter/tauri-app.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "system-tray", "api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = { version = "2.4.0", features = [] }
lazy_static = "1.4.0"
rusqlite= {version="0.24.2",features = ["bundled"] }
chrono = "0.4.31"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
